tests/snapshots/lsp_operations_test__before_gd_request.snap
---
source: tests/lsp_operations_test.rs
expression: test.snapshot_buffer_and_cursor()
---
Cursor: 5:17

fn add(a: i32, b: i32) -> i32 {
    a + b
}

fn main() {
    let result = add(5, 3);
}
