tests/snapshots/lsp_operations_test__before_goto_definition.snap
---
source: tests/lsp_operations_test.rs
expression: before
---
Cursor: 5:11

fn helper() -> i32 {
    42
}

fn process() -> i32 {
    helper()
}

fn main() {
    let x = process();
}
