tests/snapshots/lsp_operations_test__before_hover_request.snap
---
source: tests/lsp_operations_test.rs
expression: test.snapshot_buffer_and_cursor()
---
Cursor: 4:10

fn add(a: i32, b: i32) -> i32 {
    a + b
}

fn main() {
    let result = add(5, 3);
}
