tests/snapshots/lsp_operations_test__lsp_cursor_on_struct.snap
---
source: tests/lsp_operations_test.rs
expression: test.snapshot_state()
---
Mode: Normal
Cursor: 2:7
Lines: 22

Buffer:
// Rust code with various identifiers for LSP

struct [P]oint {
    x: i32,
    y: i32,
}

impl Point {
    fn new(x: i32, y: i32) -> Self {
        Point { x, y }
    }

    fn distance(&self) -> f64 {
        ((self.x.pow(2) + self.y.pow(2)) as f64).sqrt()
    }
}

fn main() {
    let p = Point::new(3, 4);
    println!("Distance: {}", p.distance());
}
