tests/snapshots/lsp_operations_test__multi_goto_step1.snap
---
source: tests/lsp_operations_test.rs
expression: test.snapshot_buffer_and_cursor()
---
Cursor: 10:0

fn helper() -> i32 {
    42
}

fn process() -> i32 {
    helper()
}

fn main() {
    let x = process();
}
